# silviculture

./: .gitignore  .npmignore  Cargo.toml  README.md  flake.nix  index.html  index.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
.cargo/: config.toml
client/: App.tsx  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/bindings/: Foo.ts  GreetRequest.ts  GreetResponse.ts
common/: api.ts
server/: builder.ts  index.ts  persistence.ts
src/: App.tsx  Button.tsx  Editor.tsx  Pane.tsx  Preview.tsx  Quiver.tsx  TopBar.tsx  YSignal.ts  cmdk.css  cmdk.tsx  custom.css  index.html  index.tsx  main.rs  style.css
src/quiver/: arrow.js  curve.js  dom.js  ds.js  index.html  main.css  parser.js  quiver.js  ui.js
src/styles/: anim.css
